# cloud-agent-dev-env

./: .allowlister.jsonc  .editorconfig  .gitignore  AGENTS.md  README.md  gh-secrets.json  justfile  llmlint.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.codex/: hooks.json
.codex/hooks/: session-start.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml  live.yml
cloud_agent_dev_env/: __init__.py  cli.py
scripts/: bootstrap_tools.py  check_repo_baseline.py  live-e2e.sh  persist_setup_env.py  session-setup.sh  setup-llmlint.sh  setup_github_governance.py
tests/: AGENTS.md
tests/e2e/: test_startup.py
tests/unit/: test_bootstrap_tools.py  test_cli.py  test_persist_setup_env.py
