[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cloud-agent-dev-env"
version = "0.1.0"
description = "Provision a Codex or Claude Code development environment for cross-repo GitHub work."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Nick DeRobertis" }]
dependencies = []

[project.scripts]
cloud-agent-dev-env = "cloud_agent_dev_env.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "ty>=0.0.1a22",
]

[tool.hatch.build.targets.wheel]
packages = ["cloud_agent_dev_env"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["ARG", "B", "C4", "E", "F", "I", "PLC", "PLE", "PLW", "RUF", "SIM", "UP"]
ignore = [
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "D", "PLR2004", "S101"]

[tool.pytest.ini_options]
addopts = [
    "--cov=cloud_agent_dev_env",
    "--cov-report=term-missing",
    "--cov-fail-under=95",
]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["cloud_agent_dev_env"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise SystemExit",
]
